--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "name": "Safaeat.github.io",
   "version": "0.1.0",
-  "homepage": "https://Safaeat.github.io/",
+  "homepage": "https://safaeat.github.io/Portfolio",
   "scripts": {
     "build": "react-scripts build",
     "predeploy": "npm run build",
@@ -18,7 +18,6 @@
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
     "fs": "0.0.1-security",
-    "gh-pages": "^2.2.0",
     "graphql": "^14.3.1",
     "gsap": "^3.12.5",
     "lottie-react": "^2.4.0",
@@ -44,6 +43,7 @@
     "@iconify/icons-logos": "^1.0.9",
     "@iconify/react": "^1.1.1",
     "dotenv": "^6.2.0",
+    "gh-pages": "^6.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "prettier": "2.0.5"
